--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,13 @@
     "**/.*",
     "node_modules",
     "components"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.14",
+    "angular-leaflet-directive": "~0.7.11",
+    "bootstrap": "~3.3.4",
+    "jquery": "~2.1.3",
+    "Leaflet.awesome-markers": "~2.0.2",
+    "underscore": "~1.8.2"
+  }
 }
