--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "~4.12.0",
-    "serve-favicon": "~2.2.0",
-    "morgan": "~1.5.0",
-    "cookie-parser": "~1.3.3",
     "body-parser": "~1.12.0",
     "compression": "~1.4.1",
-    "method-override": "~2.3.0",
+    "cookie-parser": "~1.3.3",
+    "dotenv": "^1.0.0",
+    "express": "~4.12.0",
     "glob": "~4.4.1",
-    "jade": "~1.9.1"
+    "jade": "~1.9.1",
+    "method-override": "~2.3.0",
+    "moment": "^2.9.0",
+    "morgan": "~1.5.0",
+    "serve-favicon": "~2.2.0",
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
