--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.3",
     "Leaflet.awesome-markers": "~2.0.2",
-    "underscore": "~1.8.2"
+    "underscore": "~1.8.2",
+    "ui-router": "~0.2.15"
   }
 }
