--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "method-override": "~2.3.0",
     "moment": "^2.9.0",
     "morgan": "~1.5.0",
+    "nib": "^1.1.0",
     "serve-favicon": "~2.2.0",
+    "stylus": "^0.51.1",
     "underscore": "^1.8.2"
   },
   "devDependencies": {
